<resources>
    <string name="app_name">Code+</string>
    <string name="program_select">Please select a programming language to learn?</string>
    <string name="select_java">Java!</string>
    <string name="select_python">Python!</string>
    <string name="facebook_app_id">978526122346925</string>
    <string name="fb_login_protocol_scheme">fb978526122346925</string>
    <string name="start_app">Start!</string>
    <string name="name_text">Otherwise please enter your first name below:</string>
    <string name="what_is_java_text">1.1 What is Java?</string>
    <string name="what_is_java_body">Java officially appeared in 1995 and, since then,
        has been widely adopted by programmers the world over. Java is one of the most widely
        used programming languages and is used in everything from building Web Applications to
        developing Android Apps and many things in-between!\n\nJava has several important
    features that helped it explode in popularity including a huge library of packages to help
        programmers make many kinds of programs, how safe it is to use, how portable it
    is (Can run the same program on different Operating Systems) and how much simpler it is to use
        over another popular language - C++.\n\n\n</string>
    <string name="what_is_python_text">1.1 What is Python?</string>
    <string name="what_is_python_body">Python officially appeared in the 90s and, since then,
        has been widely adopted by programmers the world over. Python is one of the most widely
        used programming languages and is used in everything from building Web Applications to
        developing Android Apps and many things in-between!\n\nPython has several important
    features that helped it explode in popularity including how portable it
    is (Can run the same program on different Operating Systems) and how much simpler it is to use and learn
        over other popular languages like Java and C++.\n\n\n</string>
    <string name="intro_to_java_programs">1.2 Introduction to Java Programs</string>
    <string name="intro_to_java_programs_body1">The following is the structure of a basic Java
        program:</string>
    <string name="intro_to_java_programs_body2">This may look a bit daunting but hang in there! We
    just need to deconstruct what\'s being shown so that it\'s easier to understand.\n\n\n</string>
    <string name="java_deconstruct">1.2.1 Deconstructing the basic Java program</string>
    <string name="java_deconstruct_body">In the purple box, we have \"public class HelloWorld\" - Using
        the reserved word \"public\" means that something in the program, from Methods (Which you\'ll
        encounter later) to Classes, can be used by the public. You can have both public and private
        methods and classes but can only have one public class. This public class has the same name
        as the source file that it resides in.\n\nA \"class\" can be thought of as a blueprint for
        something, for example a Person. From this blueprint, you can create something called
        \"Objects\" that you can use to do very interesting things as part of an important aspect of
        programming called \"Object\-Oriented Programming\".\n\nFinally, \"HelloWorld\" is the name
        of this class.\n\nIn effect, the entire statement is saying that you\'re \"declaring a new
        public class with the name \"HelloWorld\"\". After declaring the class, you must use opening
        and closing braces (\"{\" and \"}\") where code defining the class is written.\n\n\n</string>
    <string name="java_main_methods">1.2.2 Main methods</string>
    <string name="java_main_methods_body">In the blue box, we have \"public static void main(String[]
        main)\" - This is something called a \"main method\" and how to declare it.\n\nA main method is
        compulsory in Java programs and all Java programs must have one.\n\nYou may be asking \"But
        what is a Method anyway?\" - A basic example would be as follows. Suppose you have a goal to
        accomplish. To get to that goal, you\'d break that goal down into a series of steps you would
        take to reach that goal. Imagine writing those steps down on a piece of paper.\n\nAll those
        steps you\'d take collectively are what a Method is. A Method gives an output as well which
        would be the goal that you\'re trying to reach. You will learn more about Methods later.\n\nAs
        with classes, Methods should also use opening and closing braces where code defining the method
        should be written.\n\n\n</string>
    <string name="java_statements">1.2.3 Statements in Java</string>
    <string name="go_to_next">Continue</string>
    <string name="go_to_quiz">Quiz!</string>
    <string name="possible_answers">Possible answers: </string>
    <string name="python_quiz_6">Please complete the following:</string>
    <string name="python_quiz_6_answer1">Println</string>
    <string name="python_quiz_6_answer2">Class</string>
    <string name="python_quiz_6_answer3">Object</string>
    <string name="java_pseudocode">1.3 The importance of Pseudocode and Algorithms</string>
    <string name="java_pseudocode_body">Before beginning any programming, it is good practice to break
    a problem down into a series of steps using simple language. For example, let\'s assume that you
        wanted to add every number from 1 to 100 and then show the total after adding all the numbers.
        You would start with 1, add 2, then add 3 and continue until you add 100 after which
        you\'d show the total.\n\nFirst, the number that needs to be added could be stored under
        \"Current Number\" which would increment by 1 after any addition done. You\'d also need a
        running total so that could be stored under \"Total\".
    The steps that you take could be as follows:\n\n1. Set Total to 0.\n2. Set Current Number to 1.\n3.
        Add Total and Current Number.\n4. Store result in Total.\n5. Increase Current Number by 1.\n6.
    Add Total and Current Number.\n..\nAnd keep repeating until Current Number is 100 before showing the
        total.\n\nWhat we did above was break down a goal into a series of steps that tell you clearly
    and exactly how to achieve that goal. This process can be called \"Pseudocode\" or, as it\'s more
    commonly known, an \"Algorithm\". An Algorithm needs to be easy to understand and you should be
    able to program it into a computer.\n\n\n</string>
    <string name="text_statement">System.out.</string>
    <string name="text_argument">(\"Hello, World!\");</string>
    <string name="java_sr_title">About this App</string>
    <string name="java_sr_text">This app has a special feature that incorporates a learning
    technique called \"Spaced Repetition\". The technique involves the regular repeating of material
    that you want to learn or have learned so that your brain better retains the knowledge
        learned.\n\nIf you activate this feature then, at the end of each subtopic, you will be asked how confident
        you are with what you have learned. Depending on what is chosen, the same subtopic will be shown to
    you to go over however many times you want until you are confident with the material shown. This
    repetition of subtopics will only be done at the end of every topic.\n\n\n</string>
    <string name="java_sr_option">Would you like to activate this feature?</string>
    <string name="java_activate_button">Activate</string>
    <string name="java_dont_activate_button">Don\'t activate</string>
    <string name="python_sr_title">About this App</string>
    <string name="python_sr_text">This app has a special feature that incorporates a learning
    technique called \"Spaced Repetition\". The technique involves the regular repeating of material
    that you want to learn or have learned so that your brain better retains the knowledge
        learned.\n\nIf you activate this feature then, at the end of each subtopic, you will be asked how confident
        you are with what you have learned. Depending on what is chosen, the same subtopic will be shown to
    you to go over however many times you want until you are confident with the material shown. This
    repetition of subtopics will only be done at the end of every topic.\n\n\n</string>
    <string name="python_sr_option">Would you like to activate this feature?</string>
    <string name="python_activate_button">Activate</string>
    <string name="python_dont_activate_button">Don\'t activate</string>
    <string name="python_initialise_variable_title">2.1.1 How to declare variables/</string>
    <string name="python_how_to_initialise_body">In the previous section, you saw how to place and store a
    value in a box. Now, you will be shown how to do it in a Python program!\n</string>
    <string name="python_how_to_initialise_body1">Say that we want to count the number of Apples we have and store
    the value. First, you must always declare a variable before using it. Declaring a variable is simple.
        Assume that you counted 4 apples. If you wanted to store this as a variable, you\'d simply type:\n\nnumberOfApples
        = 4\n\nIn this case, the variable name is \"numberOfApples\" and the value stored in it is \"4\".\n\nIn Python,
        variables can store any type of value including, but not limited to, integers (whole numbers), double (fractional numbers like 3.142396539)
        and Strings (For example, words). The same variable can hold different types of values at any time and you can overwrite
        the value stored in a variable by simply assigning a new one. For example, if it currently holds
        a \"double\" value, you can then store a String value later by overwriting it:\n\nnumberOfApples = \"eight\"\n\nAlways
        make sure to spell the variable correctly and capitalise the correct parts since variable names are case-sensitive
        so \"numberOfApples\" is not the same as \"NumberOfApples\" and remember what type of variable it is holding. A
        way to do that is by using descriptive names that make it obvious what type of variable the variable is holding.\n\n\n</string>
    <string name="java_quiz_23">What is the return type for the following method?</string>
    <string name="java_quiz_23_answer1">int</string>
    <string name="java_quiz_23_answer2">number</string>
    <string name="java_quiz_23_answer3">double</string>
    <string name="java_quiz_35">Please complete the following:\n\nSubclasses _____ instance variables
    and methods from their superclass</string>
    <string name="java_quiz_35_answer1">Do not inherit</string>
    <string name="java_quiz_35_answer2">Inherit</string>
    <string name="java_quiz_35_answer3">Read</string>
    <string name="SR_next_topic">This is the Spaced Repetition section where you\'ll have the opportunity
    to repeat subtopics based on your responses to how confident you felt learning about any section. Please
    press \"Continue\" below and a relevant subtopic will appear. If no topics appear, then please press the
    \"Next Topic!\" button to continue onto the next section.</string>
    <string name="go_to_topic">Next Topic!</string>
</resources>