<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PythonProgramQuiz6"
        android:background="@color/white">

        <TextView
            android:id="@+id/python_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/python_quiz_6"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/python_statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_statement"
            android:textSize="20sp"
            android:layout_marginTop="11dp"
            android:layout_below="@id/python_quiz"
            android:layout_marginLeft="8dp" />

        <EditText
            android:id="@+id/quiz_input"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:width="80dp"
            android:maxLength="8"
            android:layout_below="@id/python_quiz"
            android:layout_toRightOf="@id/python_statement"
            android:layout_marginLeft="16dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20sp"
            android:imeOptions="actionDone"/>

        <TextView
            android:id="@+id/python_argument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/text_argument"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/python_quiz"
            android:layout_toRightOf="@id/quiz_input"/>

        <TextView
            android:id="@+id/possible_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/possible_answers"
            android:layout_below="@id/quiz_input"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/python_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/python_quiz_6_answer1"
            android:textSize="20sp"
            android:layout_below="@id/possible_answers"
            android:layout_marginRight="32dp"
            android:layout_toLeftOf="@id/python_answer_2"
            android:layout_marginBottom="64dp"/>

        <TextView
            android:id="@+id/python_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/python_quiz_6_answer2"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/possible_answers"
            android:layout_marginBottom="64dp"/>

        <TextView
            android:id="@+id/python_answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/python_quiz_6_answer3"
            android:textSize="20sp"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@id/python_answer_2"
            android:layout_below="@id/possible_answers"
            android:layout_marginBottom="64dp"/>

    </RelativeLayout>
</ScrollView>