<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JavaProgramQuiz35"
    android:background="@color/white">

    <TextView
        android:id="@+id/java_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/java_quiz_35"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/quiz_input"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:maxLength="15"
        android:layout_below="@id/java_quiz"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="20sp"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/possible_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/possible_answers"
        android:layout_below="@id/quiz_input"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/java_answer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_quiz_35_answer1"
        android:textSize="20sp"
        android:layout_below="@id/possible_answers"
        android:layout_marginRight="32dp"
        android:layout_toLeftOf="@id/java_answer_2"
        android:layout_marginBottom="64dp"/>

    <TextView
        android:id="@+id/java_answer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_quiz_35_answer2"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/possible_answers"
        android:layout_marginBottom="64dp"/>

    <TextView
        android:id="@+id/java_answer_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_quiz_35_answer3"
        android:textSize="20sp"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@id/java_answer_2"
        android:layout_below="@id/possible_answers"
        android:layout_marginBottom="64dp"/>

</RelativeLayout>
</ScrollView>